# abstracts

./: .gitmodules  1.md  English.md  README.md  What.md  deadlines.org  index.md  ИТ.md  Компьютерные сети.md  ОсиС.md  Основы БД.md  Социальная адаптация.md  Статья.docx  Тестирование.md  Технология разработки ПО.md
C++/: Отчет Панков Василий.docx
Computer_network/Лабораторные работы/: 2.net  3.net  Stats.xlsx  Отчёт.docx
DB/: README.org
English/: 1.org
IT/: ИТ.md
IT/Лабораторные работы/: Test.xlsm  Test.xlsx  Панков Вася 021 3.xlsx  Панков Вася 4 НОРМАЛЬНАЯ.xlsx  ПанковВ.Д._С021_ИТ_Отчёт.docx  Пирамида.pptx  Тест.pptm  Тест.pptx
MDK_01.01_C#/: PR14_PANKOVVD.7z  PR15.7z  PR15_PANKOVVD.7z  README.org
MDK_01.01_C#/23_Report/: pr23.graphml
MDK_01.01_C#/PR14_PANKOVVD/: PR14_PANKOVVD.sln
MDK_01.02_Testing/Лабораторная работа/UNIT_tests/: 1.docx  1.odt  CMakeLists.txt
MDK_01.02_Testing/Лабораторная работа/UNIT_tests (часть 2)/: 1.cpp  1.odt  1.org  CMakeLists.txt  factorial.h  fraction.h  tests.cpp
Other/: English.md
Social shit/: 1.org  scratch.org
ИТ/: New Text Document.txt  ИТ.md  Панков Вася 021 2.xlsx  Панков Вася Крутой.xlsx  ПанковВ.Д._С021_ИТ_Отчёт.docx
Компьютерные сети/: 1.org  Компьютерные сети.md
МДК 01.01 (C#)/: README.md
МДК 01.02 (Тестирование)/: Тестирование.md
МДК 02.01 (Техналогия разработки ПО)/: Технология разработки ПО.md
МДК 02.01 (Технология разработки ПО)/: Технология разработки ПО.md
ОСиС/: ОсиС.md
ОСиС(скрины)/: test.md
Основы БД/: README.org  Основы БД.md
Социальная адаптация/: 1.org
(+224 files in other folders)
